--- a/chapter2.ipynb
+++ b/chapter2.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-06-09T13:06:17.441564Z",
-     "start_time": "2025-06-09T13:06:17.398380Z"
+     "end_time": "2025-06-14T11:54:04.433908Z",
+     "start_time": "2025-06-14T11:53:59.883480Z"
     }
    },
    "source": [
@@ -25,7 +25,13 @@
     "    cv2.waitKey(1)"
    ],
    "outputs": [],
-   "execution_count": 25
+   "execution_count": 1
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## 形态学",
+   "id": "f0d149d23970311e"
   },
   {
    "metadata": {
@@ -160,11 +166,184 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "#### 腐蚀",
+   "id": "36b3e9526df7b5b9"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-14T12:05:06.182340Z",
+     "start_time": "2025-06-14T12:05:01.577923Z"
+    }
+   },
    "cell_type": "code",
+   "source": [
+    "img = cv2.imread('src/img/nihao.JPG')\n",
+    "\n",
+    "kernel = np.ones((3,3),np.uint8)\n",
+    "erosion = cv2.erode(img, kernel, iterations=1)\n",
+    "\n",
+    "cv_show(erosion)"
+   ],
+   "id": "e88c258f0f42f0ec",
    "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "e88c258f0f42f0ec"
+   "execution_count": 11
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "#### 膨胀",
+   "id": "429af66f12776a02"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-14T12:05:19.109211Z",
+     "start_time": "2025-06-14T12:05:12.750856Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "img = cv2.imread('src/img/nihao.JPG')\n",
+    "kernel = np.ones((3,3),np.uint8)\n",
+    "dilate = cv2.dilate(img, kernel, iterations=2)\n",
+    "\n",
+    "cv_show(dilate)"
+   ],
+   "id": "1f9779544c617362",
+   "outputs": [],
+   "execution_count": 12
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### 开运算和闭运算",
+   "id": "cc95d7997ea94fa4"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "#### 开：先腐蚀再膨胀",
+   "id": "cd0b9a485e43846e"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-14T12:05:31.937508Z",
+     "start_time": "2025-06-14T12:05:25.849365Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "img = cv2.imread('src/img/nihao.JPG')\n",
+    "kernel = np.ones((3,3),np.uint8)\n",
+    "opening = cv2.morphologyEx(img, cv2.MORPH_OPEN, kernel)\n",
+    "\n",
+    "cv_show(opening)"
+   ],
+   "id": "d4a81c4adcdaf187",
+   "outputs": [],
+   "execution_count": 13
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "#### 闭：先膨胀再腐蚀",
+   "id": "c9dfd4522fa9b336"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-14T12:06:02.273012Z",
+     "start_time": "2025-06-14T12:05:58.770758Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "img = cv2.imread('src/img/nihao.JPG')\n",
+    "kernel = np.ones((5,5),np.uint8)\n",
+    "closing = cv2.morphologyEx(img, cv2.MORPH_CLOSE, kernel)\n",
+    "\n",
+    "cv_show(closing)"
+   ],
+   "id": "390f9d4a00fe6a78",
+   "outputs": [],
+   "execution_count": 15
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "#### 梯度运算 梯度=膨胀-腐蚀",
+   "id": "fadf2ddc03ef5b57"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-14T12:08:55.648358Z",
+     "start_time": "2025-06-14T12:08:46.751743Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "img = cv2.imread('src/img/nihao.JPG')\n",
+    "kernel = np.ones((5,5),np.uint8)\n",
+    "dilation = cv2.dilate(img, kernel, iterations=1)\n",
+    "erosion = cv2.erode(img, kernel, iterations=1)\n",
+    "\n",
+    "gradient = cv2.morphologyEx(img, cv2.MORPH_GRADIENT, kernel)\n",
+    "\n",
+    "cv_show(gradient)"
+   ],
+   "id": "91306ee19c5f4e94",
+   "outputs": [],
+   "execution_count": 16
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "#### 礼帽和黑帽\n",
+    "- 礼帽 = 原始输入 - 开运算结果\n",
+    "- 黑帽 = 闭运算 - 原始输入"
+   ],
+   "id": "ad5a4ffb66267913"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-14T12:11:30.348065Z",
+     "start_time": "2025-06-14T12:11:28.522327Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "img = cv2.imread('src/img/nihao.JPG')\n",
+    "tophat = cv2.morphologyEx(img, cv2.MORPH_TOPHAT, kernel)\n",
+    "\n",
+    "cv_show(tophat)"
+   ],
+   "id": "38dc143b2e323bae",
+   "outputs": [],
+   "execution_count": 18
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-14T12:11:43.089728Z",
+     "start_time": "2025-06-14T12:11:39.985339Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "img = cv2.imread('src/img/nihao.JPG')\n",
+    "blackhat = cv2.morphologyEx(img, cv2.MORPH_BLACKHAT, kernel)\n",
+    "\n",
+    "cv_show(blackhat)"
+   ],
+   "id": "726e97d86b741432",
+   "outputs": [],
+   "execution_count": 19
   }
  ],
  "metadata": {
